--- a/src/templates/client/vn/footer.html
+++ b/src/templates/client/vn/footer.html
@@ -22,10 +22,13 @@
             <div class="col-md-3">
                 <h4>Chuyên mục</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Thời sự</a></li>
-                    <li><a href="#">Kinh doanh</a></li>
-                    <li><a href="#">Giải trí</a></li>
-                    <li><a href="#">Thể thao</a></li>
+                    {% for category in categories %}
+                        {% if category.parent_id is none%}
+                            {% if category.visible %}
+                                <li><a href="{{ url_for('client.category', category_slug=category.slug) }}">{{ category.name }}</a></li>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col-md-3">
