--- a/src/templates/client/en/header.html
+++ b/src/templates/client/en/header.html
@@ -22,6 +22,7 @@
             <div class="header-buttons">
                 <a href="{{ url_for('client.index') }}" class="btn-international"><i class="fas fa-globe"></i> Vietnamese</a>
                 {% if session.get('user_id') %}
+                    {% if session.get('role') == 'customer' %}
                     <div class="dropdown">
                         <button class="btn btn-link text-decoration-none text-dark dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user"></i> {{ session.get('full_name', session.get('username', 'User')) }}
@@ -32,6 +33,16 @@
                             <li><a class="dropdown-item" href="{{ url_for('client.user_logout') }}"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
                         </ul>
                     </div>
+                    {% else %}
+                            <button class="btn btn-link text-decoration-none text-dark dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user"></i> {{ session.get('full_name', session.get('username', 'User')) }}
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown" style="z-index: 1001;">
+                                <li><a class="dropdown-item" href="{{ url_for('admin.dashboard') }}"><i class="fas fa-user-circle me-2"></i> Manager</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.logout') }}"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
+                            </ul>
+                        {% endif %}
                 {% else %}
                     <a href="{{ url_for('client.user_login') }}" class="btn-login-header"><i class="fas fa-user"></i> Login</a>
                     <a href="{{ url_for('client.register') }}"><i class="fas fa-user"></i> Register</a>
