--- a/src/templates/client/en/base.html
+++ b/src/templates/client/en/base.html
@@ -19,12 +19,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div class="social-links">
+                    <!-- <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6 text-end">
                     <span class="date-time" id="currentDateTime"></span>
