--- a/src/templates/client/en/footer.html
+++ b/src/templates/client/en/footer.html
@@ -4,19 +4,19 @@
             <div class="col-md-3">
                 <h4>About VnNews</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Introduction</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Advertising</a></li>
-                    <li><a href="#">Recruitment</a></li>
+                    <li><a href="{{ url_for('client.en_introducing') }}">Introduction</a></li>
+                    <li><a href="{{ url_for('client.en_contact') }}">Contact</a></li>
+                    <!-- <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Recruitment</a></li> -->
                 </ul>
             </div>
             <div class="col-md-3">
                 <h4>Support</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Guide</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">RSS</a></li>
+                    <li><a href="{{ url_for('client.en_guide') }}">Guide</a></li>
+                    <li><a href="{{ url_for('client.en_term_of_service') }}">Terms of Service</a></li>
+                    <li><a href="{{ url_for('client.en_security') }}">Privacy Policy</a></li>
+                    <!-- <li><a href="#">RSS</a></li> -->
                 </ul>
             </div>
             <div class="col-md-3">
@@ -33,12 +33,12 @@
             </div>
             <div class="col-md-3">
                 <h4>Follow</h4>
-                <div class="social-footer">
+                <!-- <div class="social-footer">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                </div> -->
                 <div class="newsletter">
                     <input type="email" placeholder="Your email" class="form-control">
                     <button class="btn-subscribe">Subscribe</button>
