--- a/src/templates/client/vn/footer.html
+++ b/src/templates/client/vn/footer.html
@@ -4,19 +4,19 @@
             <div class="col-md-3">
                 <h4>Về VnNews</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Giới thiệu</a></li>
-                    <li><a href="#">Liên hệ</a></li>
-                    <li><a href="#">Quảng cáo</a></li>
-                    <li><a href="#">Tuyển dụng</a></li>
+                    <li><a href="{{ url_for('client.introducing') }}">Giới thiệu</a></li>
+                    <li><a href="{{ url_for('client.contact') }}">Liên hệ</a></li>
+                    <!-- <li><a href="#">Quảng cáo</a></li>
+                    <li><a href="#">Tuyển dụng</a></li> -->
                 </ul>
             </div>
             <div class="col-md-3">
                 <h4>Hỗ trợ</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Hướng dẫn</a></li>
-                    <li><a href="#">Điều khoản</a></li>
-                    <li><a href="#">Chính sách bảo mật</a></li>
-                    <li><a href="#">RSS</a></li>
+                    <li><a href="{{ url_for('client.guide') }}">Hướng dẫn</a></li>
+                    <li><a href="{{ url_for('client.term_of_service') }}">Điều khoản</a></li>
+                    <li><a href="{{ url_for('client.security') }}">Chính sách bảo mật</a></li>
+                    <!-- <li><a href="#">RSS</a></li> -->
                 </ul>
             </div>
             <div class="col-md-3">
@@ -33,12 +33,12 @@
             </div>
             <div class="col-md-3">
                 <h4>Theo dõi</h4>
-                <div class="social-footer">
+                <!-- <div class="social-footer">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                </div> -->
                 <div class="newsletter">
                     <input type="email" placeholder="Email của bạn" class="form-control">
                     <button class="btn-subscribe">Đăng ký</button>
