--- a/src/static/css/style_client.css
+++ b/src/static/css/style_client.css
@@ -914,3 +914,7 @@ img {
 ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
+
+.news-detail .news-content img {
+    width: 100%;
+}
