--- a/src/templates/client/vn/news_detail.html
+++ b/src/templates/client/vn/news_detail.html
@@ -47,6 +47,49 @@
                             {{ news.content|safe }}
                         </div>
 
+                        <!-- Author Info -->
+                        <div class="author-info mt-4 p-3 bg-light rounded">
+                            <div class="d-flex align-items-center">
+                                {% set display_author = news.author if news.author else (news.creator.full_name if news.creator else 'Admin') %}
+                                <div class="author-avatar me-3">
+                                    {% if news.author %}
+                                        {# Bài viết từ API - hiển thị avatar mặc định #}
+                                        <img src="https://ui-avatars.com/api/?name={{ news.author|urlencode }}&size=60&background=007bff&color=fff" 
+                                             alt="{{ news.author }}" 
+                                             class="rounded-circle" 
+                                             width="60" 
+                                             height="60">
+                                    {% elif news.creator and news.creator.avatar %}
+                                        <img src="/{{ news.creator.avatar }}" 
+                                             alt="{{ news.creator.full_name or news.creator.username }}" 
+                                             class="rounded-circle" 
+                                             width="60" 
+                                             height="60">
+                                    {% else %}
+                                        <img src="https://ui-avatars.com/api/?name={{ display_author|urlencode }}&size=60&background=007bff&color=fff" 
+                                             alt="{{ display_author }}" 
+                                             class="rounded-circle" 
+                                             width="60" 
+                                             height="60">
+                                    {% endif %}
+                                </div>
+                                <div class="author-details">
+                                    <h6 class="mb-1">
+                                        <strong>{{ display_author }}</strong>
+                                    </h6>
+                                    <p class="text-muted mb-0 small">
+                                        <i class="far fa-user"></i> Tác giả
+                                        {% if news.creator and news.creator.email and not news.author %}
+                                        <span class="ms-2"><i class="far fa-envelope"></i> {{ news.creator.email }}</span>
+                                        {% endif %}
+                                        {% if news.is_api %}
+                                        <span class="ms-2"><i class="fas fa-rss"></i> Nguồn bên ngoài</span>
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Tags and Share -->
                         <div class="news-footer mt-4 pt-4 border-top">
                             <div class="row">
