update index client

--- a/src/templates/client/vn/index.html
+++ b/src/templates/client/vn/index.html
@@ -139,7 +139,7 @@
                     </aside>
 
                     <!-- Video -->
-                    <aside class="sidebar-widget">
+                    <!-- <aside class="sidebar-widget">
                         <h3 class="widget-title">
                             <i class="fas fa-video"></i> Video
                         </h3>
@@ -152,7 +152,7 @@
                             </div>
                             <h4 class="video-title">Cảnh đẹp Việt Nam từ trên cao</h4>
                         </div>
-                    </aside>
+                    </aside> -->
 
                     <!-- Weather -->
                     <aside class="sidebar-widget weather-widget">
