update template admin

--- a/src/templates/admin/int-menu-manager.html
+++ b/src/templates/admin/int-menu-manager.html
@@ -1,3 +1,4 @@
+<div class="content-section" id="en-menu-manager">
     <!-- Main Content -->
     <div>
         <!-- Header -->
@@ -125,3 +126,4 @@
             </div>
         </div>
     </div>
+</div>
