--- a/src/templates/admin/menu-manager.html
+++ b/src/templates/admin/menu-manager.html
@@ -1,3 +1,4 @@
+<div class="content-section" id="menu-manager">
     <!-- Main Content -->
     <div>
         <!-- Header -->
@@ -51,6 +52,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Add/Edit Menu Modal -->
     <div class="modal fade" id="menuModal" tabindex="-1">
@@ -125,3 +127,4 @@
             </div>
         </div>
     </div>
+</div>
