--- a/src/static/css/style_admin.css
+++ b/src/static/css/style_admin.css
@@ -39,7 +39,7 @@ body {
 
 .user-info {
     padding: 20px;
-    border-bottom: 1px solid rgba(255,255,255,0.1);
+    /* border-bottom: 1px solid rgba(255,255,255,0.1); */
     display: flex;
     align-items: center;
     gap: 15px;
