--- a/src/templates/editor/editor.html
+++ b/src/templates/editor/editor.html
@@ -21,6 +21,9 @@
             </div>
         </div>
         <ul class="sidebar-menu">
+            <li class="nav-divider">
+                <span>QUẢN LÝ BÀI VIẾT</span>
+            </li>
             <li class="active">
                 <a href="#" data-section="dashboard">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
@@ -65,6 +68,9 @@
                 <a href="#" data-section="create-international">
                     <i class="fas fa-plus-circle"></i> Tạo bài Quốc tế
                 </a>
+            </li>
+            <li class="nav-divider">
+                <span>KHÁC</span>
             </li>
             <li>
                 <a href="#" id="logoutBtn">
