--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -14,8 +14,8 @@
                 <i class="fas fa-user-shield"></i>
             </div>
             <div class="user-details">
-                <strong id="userName">Quản trị viên</strong>
-                <span class="badge bg-danger">Admin</span>
+                <strong id="userName"><a href="{{ url_for('admin.profile') }}">{{ user.full_name }}</a></strong>
+                <span class="badge bg-danger">{{ user.role }}</span>
             </div>
         </div>
         <ul class="sidebar-menu">
