--- a/src/templates/editor/editor.html
+++ b/src/templates/editor/editor.html
@@ -16,8 +16,8 @@
                 <i class="fas fa-user-edit"></i>
             </div>
             <div class="user-details">
-                <strong id="userName">Biên tập viên</strong>
-                <span class="badge bg-primary">Editor</span>
+                <strong id="userName"><a href="{{ url_for('admin.profile') }}">{{ user.full_name }}</a></strong>
+                <span class="badge bg-danger">{{ user.role }}</span>
             </div>
         </div>
         <ul class="sidebar-menu">
