Update register newsletter and reset password

--- a/src/templates/client/en/footer.html
+++ b/src/templates/client/en/footer.html
@@ -40,8 +40,8 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div> -->
                 <div class="newsletter">
-                    <input type="email" placeholder="Your email" class="form-control">
-                    <button class="btn-subscribe">Subscribe</button>
+                    <input type="email" id="newsletter-email-en" placeholder="Your email" class="form-control">
+                    <button class="btn-subscribe" id="newsletter-subscribe-btn-en">Subscribe</button>
                 </div>
             </div>
         </div>
