--- a/src/templates/client/vn/footer.html
+++ b/src/templates/client/vn/footer.html
@@ -40,8 +40,8 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div> -->
                 <div class="newsletter">
-                    <input type="email" placeholder="Email của bạn" class="form-control">
-                    <button class="btn-subscribe">Đăng ký</button>
+                    <input type="email" id="newsletter-email-vn" placeholder="Email của bạn" class="form-control">
+                    <button class="btn-subscribe" id="newsletter-subscribe-btn-vn">Đăng ký</button>
                 </div>
             </div>
         </div>
