--- a/src/templates/client/vn/login.html
+++ b/src/templates/client/vn/login.html
@@ -59,6 +59,10 @@
                     </label>
                 </div>
                 
+                <div class="mb-3">
+                    <a href="{{ url_for('client.forgot_password') }}" class="forgot-password-link">Quên mật khẩu?</a>
+                </div>
+                
                 <button type="submit" class="btn btn-login">
                     <i class="fas fa-sign-in-alt me-2"></i> Đăng nhập
                 </button>
