--- a/src/static/css/style_register.css
+++ b/src/static/css/style_register.css
@@ -269,6 +269,29 @@
     text-decoration: underline;
 }
 
+.forgot-password-link {
+    color: #c00;
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: 500;
+    display: inline-block;
+    margin-top: 5px;
+}
+
+.forgot-password-link:hover {
+    text-decoration: underline;
+    color: #a00;
+}
+
+.newsletter-message {
+    font-size: 0.875rem;
+}
+
+.newsletter-message .alert {
+    margin-bottom: 0;
+    padding: 8px 12px;
+}
+
 .alert {
     border-radius: 8px;
 }
