--- a/src/templates/client/en/base.html
+++ b/src/templates/client/en/base.html
@@ -57,6 +57,26 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
+    <!-- Newsletter Modal (EN) -->
+    <div class="modal fade" id="newsletterModalEn" tabindex="-1" aria-labelledby="newsletterModalLabelEn" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="newsletterModalLabelEn">
+                        <i class="fas fa-envelope me-2"></i>Notification
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="newsletterModalBodyEn">
+                    <!-- Nội dung sẽ được cập nhật bằng JavaScript -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
