--- a/src/templates/client/en/news_detail.html
+++ b/src/templates/client/en/news_detail.html
@@ -53,9 +53,7 @@
                                 <div class="col-md-6">
                                     <div class="share-buttons">
                                         <span class="me-2">Share:</span>
-                                        <a href="#" class="btn btn-sm btn-outline-primary me-2"><i class="fab fa-facebook-f"></i> Facebook</a>
-                                        <a href="#" class="btn btn-sm btn-outline-info me-2"><i class="fab fa-twitter"></i> Twitter</a>
-                                        <a href="#" class="btn btn-sm btn-outline-danger"><i class="fab fa-youtube"></i> Copy Link</a>
+                                        <a id="copyLinkBtn" class="btn btn-sm btn-outline-secondary"><i class="fa fa-paperclip"></i> Copy Link</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-end">
@@ -366,6 +364,17 @@
         };
         return text.replace(/[&<>"']/g, m => map[m]);
     }
+
+    // Copy link
+    const copyLinkBtn = document.getElementById('copyLinkBtn');
+    if (copyLinkBtn) {
+        copyLinkBtn.addEventListener('click', function() {
+            const link = window.location.href;
+            navigator.clipboard.writeText(link);
+            showNotification('Copied link', 'success');
+        });
+    }
+
 </script>
 {% endblock %}
 
