--- a/src/templates/client/en/register.html
+++ b/src/templates/client/en/register.html
@@ -29,6 +29,7 @@
             {% endwith %}
             
             <form method="POST" action="{{ url_for('client.register') }}" id="registerForm" novalidate>
+                <input type="hidden" name="site" value="en">
                 <div class="form-group">
                     <label class="form-label">Username <span class="required">*</span></label>
                     <div class="input-group">
@@ -112,7 +113,7 @@
             </form>
             
             <div class="login-link">
-                <p>Already have an account? <a href="{{ url_for('client.user_login') }}">Login now</a></p>
+                <p>Already have an account? <a href="{{ url_for('client.en_user_login') }}">Login now</a></p>
             </div>
         </div>
     </div>
