--- a/src/templates/client/vn/footer.html
+++ b/src/templates/client/vn/footer.html
@@ -39,8 +39,8 @@
                     <a href="#"><i class="fab fa-youtube"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div> -->
-                <div class="newsletter">
-                    <input type="email" id="newsletter-email-vn" placeholder="Email của bạn" class="form-control">
+                <div class="newsletter" style="width: 350px;">
+                    <input type="email" id="newsletter-email-vn" placeholder="Email của bạn" class="form-control" style="width: 250px;">
                     <button class="btn-subscribe" id="newsletter-subscribe-btn-vn">Đăng ký</button>
                 </div>
             </div>
