--- a/src/templates/client/en/profile.html
+++ b/src/templates/client/en/profile.html
@@ -329,7 +329,7 @@
                     </div>
 
                     <div class="profile-actions mt-4 text-center">
-                        <a href="{{ url_for('client.index') }}" class="btn btn-secondary">
+                        <a href="{{ url_for('client.en_index') }}" class="btn btn-secondary">
                             <i class="fas fa-arrow-left me-2"></i> Back to home
                         </a>
                     </div>
